fix: overflow hidden not necessary here

--- a/packages/website/pages/products/w3link/index.scss
+++ b/packages/website/pages/products/w3link/index.scss
@@ -111,7 +111,6 @@
 
 #w3link_section_2 {
   position: relative;
-  overflow: hidden;
   z-index: 1;
   @include background_Dark;
   color: white;
